--- a/test/index.html
+++ b/test/index.html
@@ -31,7 +31,7 @@
 					<div class="jumbotron jumbotron-fluid">
 						<div class="container-fluid">
 							<h1 class="display-2">Testing - Bootstrap FileStyle</h1>
-							<p class="lead">View documentation: <a href="//markusslima.github.io/bootstrap-filestyle" target="_blank">Doc bootstrap filestyle</a> </p>
+							<p class="lead">View documentation: <a href="//jcputney.github.io/bootstrap-filestyle" target="_blank">Doc bootstrap filestyle</a> </p>
 						</div>
 					</div>
 				</div>
